# rock-paper-scissors-python

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/pptx-interactions/: SKILL.md
.claude/skills/pptx-interactions/references/: com-recipes.md  ooxml-syntax.md
docs/: 01-cs-기초.md  02-python-환경.md  03-python-문법.md  04-언어-비교.md  05-디버깅.md  master.md
docs/labs/: 01-바이너리-직접-실행.md  02-venv-pip-requirements.md  03-uv.md  04-poetry.md  05-conda.md  06-웹서버-uvicorn-gunicorn.md  README.md
slides/: index.html  slides.css  slides.js  스터디_슬라이드.pptx
src/rps/: __init__.py  __main__.py  cli.py  game.py  web.py
tests/: test_cli.py  test_game.py  test_hand_parser.py
tools/: build_pptx.ps1  pptx_deck.json  verify_pptx.ps1  verify_slides.py
